Fixing issue with horizontal scroll bar displaying

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600');
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   display: flex;
   min-height: 100vh;
